<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    tools:context="com.mazo.richard.registratuheroe.MainActivity">

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text"
        android:layout_alignParentBottom="true"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_button"
        >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

<RelativeLayout
    android:id="@+id/name_image_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/hero_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/person"
         />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_toLeftOf="@+id/hero_image"
    android:layout_alignTop="@+id/hero_image"
    android:layout_alignBottom="@+id/hero_image"
   android:gravity="center_vertical"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/name_edit_hint"
        />

    <EditText
        android:id="@+id/last_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_edit_hint"
        />

</LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_below="@id/name_image_layout"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/hero_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/hero_name_edit_hint"
            />

        <EditText
            android:id="@+id/age_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/age_edit_hint"
            />

        <EditText
            android:id="@+id/address_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/address_edit_hint"
            />

        <EditText
            android:id="@+id/city_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/city_edit_hint"
            />

        <EditText
            android:id="@+id/country_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/country_hint"
            />

        <EditText
            android:id="@+id/zip_code_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/zip_code_hint"
            />

        <EditText
            android:id="@+id/marital_status_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/marital_status_hint"
            />

        <EditText
            android:id="@+id/job_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/job_hint"
            />

        <EditText
            android:id="@+id/blood_type_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/blood_type_hint"
            />

    </LinearLayout>

    </RelativeLayout>

    </ScrollView>



</RelativeLayout>
